--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driverClass = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/iemes_v1?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-jdbc.username = root
-jdbc.password = root3306
+jdbc.username = xxxx
+jdbc.password = xxxxxxxx
 
 #dbcp
 #jdbc.minPoolSize=2
